--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 #eclipse files
 .classpath
 .project
+.settings
+target/*
+
  
 # Built application files
 *.apk
@@ -39,3 +42,10 @@ captures/
 # Intellij
 *.iml
  
+# Keystore files
+*.jks
+--------------------- 
+作者：Architect_csdn 
+来源：CSDN 
+原文：https://blog.csdn.net/Architect_CSDN/article/details/82430433 
+版权声明：本文为博主原创文章，转载请附上博文链接！
